# webserv

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  test.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  fr.yml  ref.yml
.github/workflows/: check-coverage.yml  check-format.yml  check-pr-target-branch.yml  unit-test.yml
cgi/: date.py  hoge.sh
conf/: webserv.conf
docs/: .gitignore  Doxyfile  doc.mk
html/: 400.html  405.html  505.html  defaultErrorPage.html  index.html  main.css
redirected/: index.html
srcs/: ADD.cpp  ADD.hpp  CGI.cpp  CGI.hpp  Conf.hpp  DeleteClientMethod.cpp  DeleteClientMethod.hpp  Directive.hpp  GET.cpp  GET.hpp  GenerateHTTPResponse.cpp  GenerateHTTPResponse.hpp  HTTPHandleSuccess.cpp  HTTPHandleSuccess.hpp  HTTPRequest.cpp  HTTPRequest.hpp  HTTPRequestParser.cpp  HTTPRequestParser.hpp  HTTPResponse.cpp  HTTPResponse.hpp  HandleError.cpp  HandleError.hpp  Handler.hpp  IAddressData.hpp  IServerFD.hpp  IServerListen.hpp  ListenDirectory.cpp  ListenDirectory.hpp  MultiPortServer.cpp  MultiPortServer.hpp  OSInit.cpp  OSInit.hpp  POST.cpp  POST.hpp  ParseConf.hpp  ParseHTTPRequest.hpp  PrintResponse.cpp  PrintResponse.hpp  RunServer.cpp  RunServer.hpp  (+14 more)
srcs/OSInit/: IPollData.hpp  IServerAccept.hpp  IServerBind.hpp  IServerfunctions.hpp  Makefile  OSInit  OSInit.cpp  OSInit.hpp  Poll.cpp  Poll.hpp  ServerData.cpp  ServerData.hpp  main.cpp
test/: CMakeLists.txt  Makefile
test/srcs/: ADDTest.cpp  CGITest.cpp  DeleteClientMethodTest.cpp  GenerateHTTPResponseTest.cpp  HTTPRequestParserTest.cpp  HandleErrorTest.cpp  HelloTest.cpp  ListenDirectoryTest.cpp  MultiPortServerTest.cpp  OSInitTest.cpp  POSTTest.cpp  PrintResponseTest.cpp  RunServerTest.cpp  ServerDataTest.cpp  StatusCodesTest.cpp  TOMLParserTest.cpp
